--- a/index/_haml/index.haml
+++ b/index/_haml/index.haml
@@ -8,7 +8,7 @@ permalink: /
   .container.site-heading
     .row
       .col-lg-10.col-lg-offset-1.col-md-10.col-md-offset-1
-        %h1{'cw-text' => "{{ site.author }}", 'cw-leading-cursor' => 'true'}
+        %h1 {{ site.title }}
     .row
       .col-lg-10.col-lg-offset-1.col-md-10.col-md-offset-1
         .photo#photo
