--- a/_layouts/_haml/page.haml
+++ b/_layouts/_haml/page.haml
@@ -4,15 +4,15 @@ layout: default
 
 / Header
 %header.intro-header
-  %div{:class => "{% if page.subtitle %}container page-heading{% else %}container page-heading padded-heading{% endif %}"}
+  %div{:class => "{% if page.subtitle or site.subtitle %}container page-heading{% else %}container page-heading padded-heading{% endif %}"}
     .row
       .col-lg-10.col-lg-offset-1.col-md-10.col-md-offset-1
-        %h1 {{ page.title }}
-    {% if page.subtitle %}
+        %h1 {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
+    {% if page.subtitle or site.subtitle %}
     .row
       .col-lg-10.col-lg-offset-1.col-md-10.col-md-offset-1
         %hr.small
-        %h2.subheading {{ page.subtitle }}
+        %h2.subheading {% if page.subtitle %}{{ page.subtitle }}{% else %}{{ site.subtitle }}{% endif %}
     {% endif %}
 
 / Content
