--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,17 +3,17 @@ layout: default
 ---
 <!-- Header -->
 <header class='intro-header'>
-  <div class='{% if page.subtitle or site.subtitle %}container page-heading{% else %}container page-heading padded-heading{% endif %}'>
+  <div class='{% if page.subtitle %}container page-heading{% else %}container page-heading padded-heading{% endif %}'>
     <div class='row'>
       <div class='col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1'>
-        <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+        <h1>{{ page.title }}</h1>
       </div>
     </div>
-    {% if page.subtitle or site.subtitle %}
+    {% if page.subtitle %}
     <div class='row'>
       <div class='col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1'>
         <hr class='small'>
-        <h2 class='subheading'>{% if page.subtitle %}{{ page.subtitle }}{% else %}{{ site.subtitle }}{% endif %}</h2>
+        <h2 class='subheading'>{{ page.subtitle }}</h2>
       </div>
     </div>
     {% endif %}
