--- a/_includes/_haml/nav.haml
+++ b/_includes/_haml/nav.haml
@@ -12,6 +12,6 @@
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li
-          %a{:href => "{{ site.baseurl }}/blog"} Blog
+          %a{:href => "{{ site.baseurl }}/"} Blog
         %li
           %a{:href => "{{ site.baseurl }}/contact"} Contact
