--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
       <ul class='nav navbar-nav'>
         <li>
-          <a href='{{ site.baseurl }}/blog'>Blog</a>
+          <a href='{{ site.baseurl }}/'>Blog</a>
         </li>
         <li>
           <a href='{{ site.baseurl }}/contact'>Contact</a>
